--- a/src/styles/zIndex.css
+++ b/src/styles/zIndex.css
@@ -63,3 +63,8 @@
 .force-header-level {
   z-index: 5000 !important;
 }
+
+/* Mappa container z-index custom */
+.z-map-container-custom {
+  z-index: 10 !important;
+}
